--- a/index.html
+++ b/index.html
@@ -1,12 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Meu novo website</title>
-</head>
-<body>
-	<div>
-		<h1>Ol· Mundo!</h1>
-	</div>
-</body>
+<!DOCTYPE html>
+
+<html lang="en">
+
+<head>
+
+	<meta charset="UTF-8">
+
+	<title>ola teste</title>
+
+</head>
+
+<body>
+
+	<div>
+
+		<h1>Ol√° pessoal!</h1>
+
+	</div>
+
+</body>
+
 </html>
