--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
 	<div>
-
+<img src="http://ronaldobap.github.io/imagens/IMG_0219.lpeg" alt="Exemplo de Imagem">
 		<h1>Olá pessoal!</h1>
 
 	</div>
