--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
 	<div>
-<img src="http://ronaldobap.github.io/imagens/IMG_0219.jpg" alt="Exemplo de Imagem">
+<img src="https://ronaldobap.github.io/imagens/IMG_0219.jpg" alt="novo web com imagem">
 		<h1>Olá pessoal!</h1>
 
 	</div>
