--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
 
 	<meta charset="UTF-8">
 
-	<title>ola teste</title>
+	<title>ERP WEB</title>
 
 </head>
 
 <body>
 
 	<div>
-<img src="https://ronaldobap.github.io/imagens/IMG_0219.jpg" alt="novo web com imagem">
-		<h1>Olá pessoal!</h1>
 
+		<h1>Olá pessoal!</h1>
+                <img src="https://ronaldobap.github.io/imagens/IMG_1796.JPG" alt="novo web com imagem">
 	</div>
 
 </body>
