--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<div>
 
 		<h1>Olá pessoal!</h1>
-                <img src="https://ronaldobap.github.io/imagens/IMG_1796.JPG" alt="novo web com imagem">
+                <img src="https://ronaldobap.github.io/imagens/IMG_1796.JPG" alt="iMAGEM png">
 	</div>
 
 </body>
