--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
 
 	<div>
 
-		<h1>Olá pessoal!</h1>
-                <img src="https://ronaldobap.github.io/imagens/IMG_1796.JPG" alt="iMAGEM png">
+		<h1>Projeto ERP WEB</h1>
+		<?php include('index.php') ?>
+                <img src="https://ronaldobap.github.io/imagens/teste.pdf" alt="iMAGEM png">
 	</div>
 
 </body>
