--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
 
 	<div>
 
-		<h1>Projeto ERP WEB</h1>
-		<?php include('index.php') ?>
+		<h1>Projeto ERP WEB 1.0</h1>
                 <img src="https://ronaldobap.github.io/index.php">
 	</div>
 
